    and rewrite its description to be less indirect.  (Closes: #622263)
  * Update the dpkg-buildpackage -r documentation in the appendix to
    reflect the current behavior of using fakeroot.  Wording from Sam
    Morris.  (Closes: #658009)
  * Fix the legal notice in copyright-format to not refer to a nonexistent
    copyright notice.
  * Install the HTML version of upgrading-checklist in the policy.html
    directory as upgrading-checklist.html so that it can be deployed on
    www.debian.org in a way that will allow links to Policy sections to
    work easily.  Thanks, Charles Plessy.  (Partly addresses #639663)
  * Ship the copyright-format source as copyright-format.xml.tar.gz
    without a version, since it will include all of the versions, not just
    the current version.
  * Fix mistaken word choice (prefix instead of suffix) in the upgrading
    checklist entry for 3.9.3.0.
  * Add some missing entries to the virtual package names list changelog.
  * Remove unused substitution variable generated by the build.  Thanks,
    Charles Plessy.
  * Strip down and reformat debian/rules to remove unused variables,
    references to old files no longer included, use a more standard
    layout and standardize variable names, and add comments for better
    maintainability.

 -- Russ Allbery <rra@debian.org>  Wed, 22 Feb 2012 20:07:42 -0800

debian-policy (3.9.3.0) unstable; urgency=low

  [ Russ Allbery ]
  * Update the copyright format document to the version of DEP-5 from the
    DEP web site and apply additional changes from subsequent discussion
    in debian-devel and debian-project.  Revise for clarity, to add more
    examples, and to update the GFDL license versions.  Thanks, Steve
    Langasek, Charles Plessy, Justin B Rye, and Jonathan Nieder.
    (Closes: #658209, #648387)
  * Publish the copyright format specification as copyright-format-1.0 so
    that later versions can be added without removing previous versions of