@@ -1,8 +1,10 @@
 /Process.html
 /README.html
 /copyright-format/copyright-format-1.0.html
+/copyright-format/version.xml
 /debconf_spec/debconf_specification.html
 /debconf_spec/debconf_specification.txt.gz
+/debconf_spec/include/version.xml
 /debian/files
 /debian/tmp/
 /menu-policy.html/
